--- a/app/view/templates/index.html
+++ b/app/view/templates/index.html
@@ -29,6 +29,37 @@ $("#file").change(function(){
     return url;
   }
 
+  function file_select_handler(to_upload) {
+      var progressbar = $('#progressbar');
+      var status = $('#status');
+      var xhr = new XMLHttpRequest();
+      xhr.upload.addEventListener('loadstart', function(e1){
+          status.text('uploading image');
+          progressbar.progressbar({max: e1.total});
+      });
+      xhr.upload.addEventListener('progress', function(e1){
+          if (progressbar.progressbar('option', 'max') == 0)
+              progressbar.progressbar('option', 'max', e1.total);
+          progressbar.progressbar('value', e1.loaded);
+      });
+      xhr.onreadystatechange = function(e1) {
+          if (this.readyState == 4)  {
+              if (this.status == 200)
+                  var text = 'upload complete: ' + this.responseText;
+              else
+                  var text = 'upload failed: code ' + this.status;
+              status.html(text + '<br/>Select an image');
+              progressbar.progressbar('destroy');
+          }
+      };
+      xhr.open('POST', '/post', true);
+      xhr.send(to_upload);
+  };
+
+  $('#file').change(function(e){
+      file_select_handler(e.target.files[0]);
+      e.target.value = '';
+  });
 
     </script>
 </head>
