--- a/app/view/css/style.css
+++ b/app/view/css/style.css
@@ -1,13 +1,52 @@
-.colorPreview{
-    position:absolute;
-    top:5px;
-    right:5px;
-    display:block;
-    margin:0;
-    padding:0;
+/*.colorPreview{*/
+    /*position:absolute;*/
+    /*top:5px;*/
+    /*right:5px;*/
+    /*display:block;*/
+    /*margin:0;*/
+    /*padding:0;*/
+    /*width:50px;*/
+    /*height:50px;*/
+    /*border: 5px solid #FFF;*/
+    /*border-right: none;*/
+    /*border-top: none;*/
+/*}*/
+
+.color-box {
+    float:left;
     width:50px;
-    height:50px;
-    border: 5px solid #FFF;
-    border-right: none;
-    border-top: none;
+    height:30px;
+    margin:5px;
+    border: 1px solid white;
+}
+
+#img_loader{
+
+}
+
+.right-to-img-loader {
+    height: 350px;
+    display: block;
+    float: left;
+    margin-left: 50px;
+    background-color: beige;
+}
+
+.clear {
+    clear: both;
+}
+
+.img-inner {
+    width: 350px;
+    height: 350px;
+    display: block;
+    float: left;
+    border: solid 1px gray;
+}
+
+.img-outer {
+    width: auto;
+    height: 350px;
+    margin: 30px;
+    padding: 20px;
 }
