--- a/app/view/css/style.css
+++ b/app/view/css/style.css
@@ -1,17 +1,3 @@
-/*.colorPreview{*/
-    /*position:absolute;*/
-    /*top:5px;*/
-    /*right:5px;*/
-    /*display:block;*/
-    /*margin:0;*/
-    /*padding:0;*/
-    /*width:50px;*/
-    /*height:50px;*/
-    /*border: 5px solid #FFF;*/
-    /*border-right: none;*/
-    /*border-top: none;*/
-/*}*/
-
 .color-box {
     float:left;
     width:50px;
@@ -49,4 +35,12 @@
     height: 350px;
     margin: 30px;
     padding: 20px;
+}
+
+#container{
+    position: relative;
+}
+
+#canvas,#layoutCanvas{
+    position: absolute;
 }
