--- a/app/view/index.html
+++ b/app/view/index.html
@@ -8,72 +8,87 @@
     <script src="../controller/pixelate.js"></script>
     <script src="../controller/editor.js"></script>
     <script src="../lib/js/colpick.js" type="text/javascript"></script>
+    <script src="../lib/js/jquery.Jcrop.js"></script>
+    <script src="../lib/js/jquery.Jcrop.min.js"></script>
+    <script src="js/jcrop_main.js"></script>
+
     <link rel="stylesheet" href="../lib/css/colpick.css" type="text/css"/>
+    <link rel="stylesheet" href="../lib/css/jquery.Jcrop.css" type="text/css"/>
 
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
-    <h1>
-        <center>Welcome to Knitting Web App</center>
-    </h1>
-    <h3></h3>
+<h1>
+    <center>Welcome to Knitting Web App</center>
+</h1>
+<h3></h3>
 
-    <div ng-app="knitWebApp" ng-controller="knitPattrnCtrl">
-        <fieldset>
-            <p id="status">Load a Pattern</p>
+<div ng-app="knitWebApp" ng-controller="knitPattrnCtrl">
+    <fieldset>
+        <p id="status">Load a Pattern</p>
 
-            <div id="progressbar"></div>
-            <input id="file" type="file" onchange="readURL(this);" ng-model="pattern"/>
-        </fieldset>
-        <br>
+        <div id="progressbar"></div>
+        <input id="file" type="file" onchange="readURL(this);" ng-model="pattern"/>
+    </fieldset>
+    <br>
 
 
-        <div class="img-outer">
-            <div class="img-inner">
-                <img id="img_loader" style="border:1px solid black; display: inline" src="#"/>
-            </div>
-            <div class="right-to-img-loader">
-                <button id="addBtn">Add Colour</button>
-                <table id="previewTable">
-                </table>
-            </div>
-            <div class="clear"></div>
+    <div class="img-outer">
+        <div id="img_inner" class="img-inner">
+            <img id="img_loader" style="border:1px solid black; display: inline;width: 350px;height: 350px" src="#"/>
         </div>
+        <div id="preview" class="preview-box">
+            <canvas id="previewCanvas" width="350" height="350" style="border: solid 1px grey"></canvas>
+            <button onclick="crop()">Crop</button>
+            <button onclick="draw()">Draw</button>
+            <button id="rotateLeftBtn" onclick="rotate(-30)">Rotate Left</button>
+            <button id="rotateRightBtn" onclick="rotate(30)">Rotate Right</button>
+        </div>
+        <div class="right-to-img-loader">
+            <button id="addBtn">Add Yarn Colour</button>
+            <table id="previewTable">
+            </table>
+        </div>
+        <div class="clear"></div>
+    </div>
 
+
+    <fieldset>
         <button onclick="init()">Generate Pattern</button>
         <br>
-        <fieldset>
-            <p>Preview of the pattern</p>
+        <p>Preview of the pattern</p>
 
+        <div>
             <div>
-                <div>
-                    <div id="container"  style="float: left;width:1000px;height:1000px;">
-                        <canvas id="canvas" width=1000 height=1000 style="border:1px solid grey; margin-left: 50px;float: left"></canvas>
-                        <canvas id="layoutCanvas" width="1000" height="1000" style="border:1px solid grey; margin-left: 50px;float: left"></canvas>
-                    </div>
-                    <div style="float: left;margin-left: 100px">
-                        <div id="picker1" ></div>
-                        <button onclick="colourChange()">Add</button>
-                        <button onclick="pixelDel()">Delete</button>
-                    </div>
-                    <div style="clear:both;"></div>
+                <div id="container" style="float: left;width:1000px;height:1000px;">
+                    <canvas id="canvas" width=1000 height=1000
+                            style="border:1px solid grey; margin-left: 50px;float: left"></canvas>
+                    <canvas id="layoutCanvas" width="1000" height="1000"
+                            style="border:1px solid grey; margin-left: 50px;float: left"></canvas>
                 </div>
-                <canvas id="canvas2" width=400 height=400 style="display: none"></canvas>
+                <div style="float: left;margin-left: 100px">
+                    <div id="picker1"></div>
+                    <button onclick="colourChange()">Add</button>
+                    <button onclick="pixelDel()">Delete</button>
+                </div>
+                <div style="clear:both;"></div>
             </div>
-            <div style="display: none">
-                <button onclick="getColourValues()" style="display: inline">Pixelate</button>
-                <button onclick="clear()">Clear</button>
-                <br>
-                <input id="blocks" type="range" min="1" max="12" value="12">
-            </div>
+            <canvas id="canvas2" width=400 height=400 style="display: none"></canvas>
+        </div>
+        <div style="display: none">
+            <button onclick="getColourValues()" style="display: inline">Pixelate</button>
+            <button onclick="clear()">Clear</button>
             <br>
-            <br>
-        </fieldset>
+            <input id="blocks" type="range" min="1" max="12" value="12">
+        </div>
+        <br>
+        <br>
+    </fieldset>
 
-    </div>
-    <script src="../controller/colorschema.js"></script>
-    <script src="../controller/colourpicker.js"></script>
+</div>
+<script src="../controller/colorschema.js"></script>
+<script src="../controller/colourpicker.js"></script>
 </body>
 </html>
 
