--- a/app/view/index.html
+++ b/app/view/index.html
@@ -58,18 +58,23 @@
             <div>
                 <div id="container" style="float: left;width:1000px;height:1000px;">
                     <canvas id="canvas" width=1000 height=1000
-                            style="border:1px solid grey; margin-left: 50px;float: left"></canvas>
+                            style="border:1px solid grey; margin-left: 10px;float: left"></canvas>
                     <canvas id="layoutCanvas" width="1000" height="1000"
-                            style="border:1px solid grey; margin-left: 50px;float: left"></canvas>
+                            style="border:1px solid grey; margin-left: 10px;float: left"></canvas>
                 </div>
-                <div style="float: left;margin-left: 5%">
+                <div style="float: left;margin-left: 2%">
                     <div id="picker1"></div>
                     <button onclick="colourChange()">Add</button>
                     <button onclick="pixelDel()">Delete</button>
                     <button onclick="undo()">Undo</button>
+                    <!--<button onclick="checkBounds()">test</button>-->
                 </div>
                 <br>
-                <div style="float: left;margin-left: 5%;margin-top: 10px;border: groove 1px lightgrey;width: 200px;height: 60px">
+                <div style="float: left;margin-left: 2%;margin-top: 10px;border: groove 1px lightgrey;width: 200px;height: 60px">
+                    <input type="checkbox">Show Colour Regions
+                </div>
+                <br>
+                <div style="float: left;margin-left: 2%;margin-top: 10px;border: groove 1px lightgrey;width: 200px;height: 60px">
                     <input type="radio" name="areaTool" id="freeHandSelect" onclick="selectTool(true)">Free Hand<br>
                     <input type="radio" name="areaTool" id="squareSelect" onclick="selectTool(false)" checked="checked">Square
                 </div>
