editing colour region functionality almost finished

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <br>
                 <div style="float: left;margin-left: 2%;margin-top: 10px;border: groove 1px lightgrey;width: 200px;height: 60px">
-                    <input type="checkbox">Show Colour Regions
+                    <input type="checkbox" onclick="checkBounds(this)">Show Colour Regions
                 </div>
                 <br>
                 <div style="float: left;margin-left: 2%;margin-top: 10px;border: groove 1px lightgrey;width: 200px;height: 60px">
