--- a/app/view/index.html
+++ b/app/view/index.html
@@ -6,6 +6,9 @@
 
     <script src="../controller/pixelate.js"></script>
     <script src="../controller/editor.js"></script>
+    <script src="../model/client/client.js"></script>
+    <script src="../controller/com_handler.js"></script>
+
     <script src="../lib/js/colpick.js" type="text/javascript"></script>
     <script src="../lib/js/jquery.Jcrop.js"></script>
     <script src="../lib/js/jquery.Jcrop.min.js"></script>
@@ -57,10 +60,9 @@
         <div>
             <div>
                 <div id="container" style="float: left;width:1000px;height:1000px;">
-                    <canvas id="canvas" width=1000 height=1000
-                            style="border:1px solid grey; margin-left: 10px;float: left"></canvas>
-                    <canvas id="layoutCanvas" width="1000" height="1000"
-                            style="border:1px solid grey; margin-left: 10px;float: left"></canvas>
+                    <canvas id="canvas" class="canvas" width=1000 height=1000></canvas>
+                    <canvas id="gridCanvas" class="canvas" width="1000" height="1000"></canvas>
+                    <canvas id="layoutCanvas" class="canvas" width="1000" height="1000"></canvas>
                 </div>
                 <div style="float: left;margin-left: 2%">
                     <div id="picker1"></div>
@@ -70,13 +72,17 @@
                     <!--<button onclick="checkBounds()">test</button>-->
                 </div>
                 <br>
-                <div style="float: left;margin-left: 2%;margin-top: 10px;border: groove 1px lightgrey;width: 200px;height: 60px">
+                <div class="panel">
                     <input type="checkbox" onclick="checkBounds(this)">Show Colour Regions
                 </div>
                 <br>
-                <div style="float: left;margin-left: 2%;margin-top: 10px;border: groove 1px lightgrey;width: 200px;height: 60px">
+                <div class="panel">
                     <input type="radio" name="areaTool" id="freeHandSelect" onclick="selectTool(true)">Free Hand<br>
                     <input type="radio" name="areaTool" id="squareSelect" onclick="selectTool(false)" checked="checked">Square
+                </div>
+                <div class="panel">
+                    <select id="port_list"></select>
+                    <button onclick="refreshPorts()">Refresh Ports</button>
                 </div>
                 <div style="clear:both;"></div>
             </div>
@@ -86,7 +92,6 @@
             <button onclick="getColourValues()" style="display: inline">Pixelate</button>
             <button onclick="clear()">Clear</button>
             <br>
-            <input id="blocks" type="range" min="1" max="12" value="12">
         </div>
         <br>
         <br>
