client methodes updated

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -84,6 +84,10 @@
                     <select id="port_list"></select>
                     <button onclick="refreshPorts()">Refresh Ports</button>
                 </div>
+                <div class="panel">
+                    <select id="machine_list"></select>
+                    <button onclick="updateMachineType()">Machine Type</button>
+                </div>
                 <div style="clear:both;"></div>
             </div>
             <canvas id="canvas2" width=400 height=400 style="display: none"></canvas>
