--- a/app/view/css/style.css
+++ b/app/view/css/style.css
@@ -6,11 +6,20 @@
     border: 1px solid white;
 }
 
-#img_loader{
-
+#img_loader {
+    border:1px solid black;
+    display: inline;
+    width: 350px;
+    height: 350px;
 }
 
-.preview-box{
+#test {
+    width: 350px;
+    height: 350px;
+    display: none;
+}
+
+.preview-box {
     height: 350px;
     width: 350px;
     float: left;
