--- a/app/view/index.html
+++ b/app/view/index.html
@@ -35,8 +35,8 @@
     <br>
     <div class="img-outer">
         <div id="img_inner" class="img-inner">
-            <img id="img_loader" style="border:1px solid black; display: inline;width: 350px;height: 350px" src="#"/>
-            <img id="test" src="#" style="width: 350px;height: 350px;display: none"/>
+            <img id="img_loader" src="#"/>
+            <img id="test" src="#" style="display: none"/>
         </div>
         <div id="preview" class="preview-box">
             <canvas id="previewCanvas" width="350" height="350" style="border: solid 1px grey"></canvas>
