--- a/app/view/index.html
+++ b/app/view/index.html
@@ -3,7 +3,6 @@
 <head>
     <title>Knitting Web App</title>
     <script src="../lib/js/jquery.min.js"></script>
-
     <script src="../controller/pixelate.js"></script>
     <script src="../controller/editor.js"></script>
     <script src="../model/client/client.js"></script>
@@ -16,95 +15,196 @@
 
     <link rel="stylesheet" href="../lib/css/colpick.css" type="text/css"/>
     <link rel="stylesheet" href="../lib/css/jquery.Jcrop.css" type="text/css"/>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="responsive/responsive.css">
 </head>
 
 <body>
-<h1>
-    <center>Welcome to Knitting Web App</center>
-</h1>
-<h3></h3>
+<div id="heading">
+    <h1>Knitting Web App</h1>
+</div>
 
-<div>
-    <fieldset>
+
+<div id="wrapper">
+    <fieldset id="load-file">
         <p id="status">Load a Pattern</p>
-
-        <div id="progressbar"></div>
         <input id="file" type="file" onchange="readURL(this);" />
     </fieldset>
-    <br>
-    <div class="img-outer">
+    <div id="row-preview" class="img-outer">
         <div id="img_inner" class="img-inner">
             <img id="img_loader" src="#"/>
             <img id="test" src="#" style="display: none"/>
+            <div id="loader-controller-group">
+                <label>
+                    <input id="cropCheck" onclick="crop()" type="checkbox">
+                    &nbsp;Enable cropping
+                </label>
+                <div class="right">
+                    <button title="Crop" onclick="draw()"><img src="responsive/crop.png"></button>
+                </div>
+            </div>
         </div>
         <div id="preview" class="preview-box">
-            <canvas id="previewCanvas" width="350" height="350" style="border: solid 1px grey"></canvas>
-            <input id="cropCheck" type="checkbox" onclick="crop()">Crop Enable</input>
-            <button onclick="draw()">Crop</button>
-            <button id="rotateLeftBtn" onclick="rotate(-90)">Rotate<-</button>
-            <button id="rotateRightBtn" onclick="rotate(90)">Rotate-></button>
+            <canvas id="previewCanvas"></canvas>
+
+            <div id="preview-controller-group">
+                <div class="right">
+                    <button id="rotateLeftBtn" title="Rotate left" onclick="rotate(-90)"><img src="responsive/rotate-acc.png"></button>
+                    <button id="rotateRightBtn" title="Rotate right" onclick="rotate(90)"><img src="responsive/rotate-cc.png"></button>
+                </div>
+            </div>
         </div>
-        <div class="right-to-img-loader">
+
+        <div id="yarn-colors" class="right-to-img-loader">
             <button id="addBtn">Add Yarn Colour</button>
-            <table id="previewTable">
-            </table>
+            <table id="previewTable" cellspacing="0" cellpadding="0"></table>
         </div>
+
         <div class="clear"></div>
     </div>
-    <fieldset>
+    <div id="generator">
         <button onclick="init()">Generate Pattern</button>
-        <br>
-        <p>Preview of the pattern</p>
+    </div>
+
+    <fieldset id="row-generated">
+        <h3>Pattern Preview</h3>
 
         <div>
             <div>
-                <div id="container" style="float: left;width:1000px;height:1000px;">
-                    <canvas id="canvas" class="canvas" width=1000 height=1000></canvas>
-                    <canvas id="gridCanvas" class="canvas" width="1000" height="1000"></canvas>
-                    <canvas id="layoutCanvas" class="canvas" width="1000" height="1000"></canvas>
+                <div id="container">
+                    <canvas id="canvas" class="canvas"></canvas>
+                    <canvas id="gridCanvas" class="canvas"></canvas>
+                    <canvas id="layoutCanvas" class="canvas"></canvas>
+                    <div class="clear"></div>
                 </div>
-                <div style="float: left;margin-left: 2%">
-                    <div id="picker1"></div>
-                    <button onclick="colourChange()">Add</button>
-                    <button onclick="pixelDel()">Delete</button>
-                    <button onclick="undo()">Undo</button>
+                <div id="controller-group-a" class="panel">
+                    <div class="input-group">
+                        <div class="text-input-group">
+                            <label>&nbsp;</label>
+                            <div id="picker1"></div>
+                        </div>
+                        <div class="text-input-group">
+                            <label>&nbsp;</label>
+                            <button onclick="colourChange()">Add</button>
+                            <button onclick="pixelDel()">Delete</button>
+                            <button onclick="undo()">Undo</button>
+                        </div>
+                    </div>
                     <!--<button onclick="checkBounds()">test</button>-->
                 </div>
-                <br>
+
                 <div class="panel">
-                    columns: <input id="widthInput" class="input-params" type="text" value="100"></br>
-                    rows: <input id="heightInput" class="input-params" type="text" value="100">
+                    <div class="input-group">
+                        <div class="text-input-group">
+                            <label>columns:&nbsp;</label>
+                            <input id="widthInput" class="input-params" type="text" value="100">
+                            <div class="clear"></div>
+                        </div>
+
+                        <div class="text-input-group">
+                            <label>rows:&nbsp;</label>
+                            <input id="heightInput" class="input-params" type="text" value="100">
+                            <div class="clear"></div>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="panel">
-                    <input type="checkbox" onclick="checkBounds(this)">Show Colour Regions
+                    <div class="input-group">
+                        <div class="text-input-group">
+                            <label>&nbsp;</label>
+                            <input type="checkbox" onclick="checkBounds(this)">&nbsp;Show Colour Regions
+                        </div>
+                    </div>
                 </div>
-                <br>
+
                 <div class="panel">
-                    <input type="radio" name="areaTool" id="freeHandSelect" onclick="selectTool(true)">Free Hand<br>
-                    <input type="radio" name="areaTool" id="squareSelect" onclick="selectTool(false)" checked="checked">Square
+                    <div class="input-group">
+                        <div class="text-input-group">
+                            <label>&nbsp;</label>
+                            <input type="radio" name="areaTool" id="freeHandSelect" onclick="selectTool(true)">&nbsp;Free Hand
+                        </div>
+                        <div class="text-input-group">
+                            <label>&nbsp;</label>
+                            <input type="radio" name="areaTool" id="squareSelect" checked="checked" onclick="selectTool(false)">&nbsp;Square
+                        </div>
+                    </div>
+
                 </div>
+
                 <div class="panel">
-                    <select id="port_list"></select>
-                    <button onclick="refreshPorts()">Refresh Ports</button>
+                    <div class="input-group">
+                        <div class="text-input-group">
+                            <label>&nbsp;</label>
+                            <select id="port_list"></select>&nbsp;
+                            <button onclick="refreshPorts()">Refresh Ports</button>
+                        </div>
+                    </div>
                 </div>
+
                 <div class="panel">
-                    <select id="machine_list"></select>
-                    <button onclick="updateMachineType()">Machine Type</button>
+                    <div class="input-group">
+                        <div class="text-input-group">
+                            <label>&nbsp;</label>
+                            <select id="machine_list"></select>&nbsp;
+                            <button onclick="updateMachineType()">Machine Type</button>
+                        </div>
+                    </div>
                 </div>
-                <div style="clear:both;"></div>
+                <div class="clear"></div>
+
             </div>
-            <canvas id="canvas2" width=1000 height=1000 style="display: none"></canvas>
+
         </div>
-        <div style="display: none">
-            <button onclick="getColourValues()" style="display: inline">Pixelate</button>
-            <button onclick="clear()">Clear</button>
-            <br>
-        </div>
-        <br>
-        <br>
     </fieldset>
 </div>
+<canvas id="canvas2" width=1000 height=1000 style="display: none"></canvas>
+<script type="text/javascript">
+    $("#img_inner").height($("#img_inner").width());
+    $("#preview").height($("#preview").width());
+    $("#yarn-colors").height($("#preview").width());
+
+    $("#container").height($("#container").width());
+    // $("#canvas").height($("#canvas").width());
+    // $("#layoutCanvas").height($("#layoutCanvas").width());
+    // $("#gridCanvas").height($("#gridCanvas").width());
+
+    calibrateColorsTable();
+
+    $(window).resize(function() {
+        $("#img_inner").height($("#img_inner").width());
+        $("#preview").height($("#preview").width());
+        $("#yarn-colors").height($("#preview").width());
+
+        $("#container").height($("#container").width());
+        // $("#canvas").height($("#canvas").width());
+        // $("#layoutCanvas").height($("#layoutCanvas").width());
+        // $("#gridCanvas").height($("#gridCanvas").width());
+
+        calibrateColorsTable();
+    });
+
+    $(document).ready(function() {
+
+    });
+
+    function calibrateColorsTable() {
+        // calibrate colors table size
+        var containerHeight  = parseInt($("#yarn-colors").height());
+        var btnHeight        = parseInt($("#addBtn").height());
+        var btnMarginTop     = parseInt($("#addBtn").css('margin-top').replace("px", ""));
+        var btnMarginBottm   = parseInt($("#addBtn").css('margin-bottom').replace("px", ""));
+        var btnBorderTop     = parseInt($("#addBtn").css('border-top-width').replace("px", ""));
+        var btnBorderBottom  = parseInt($("#addBtn").css('border-bottom-width').replace("px", ""));
+        var btnPaddingTop    = parseInt($("#addBtn").css('padding-top').replace("px", ""));
+        var btnPaddingBottom = parseInt($("#addBtn").css('padding-bottom').replace("px", ""));
+
+        var table_height = containerHeight - (btnHeight + btnMarginTop*2 + btnMarginBottm + btnBorderTop*2 + btnBorderBottom + btnPaddingTop*2 + btnPaddingBottom);
+        console.log(table_height);
+        $("#previewTable").height(table_height);
+    }
+
+</script>
+
 <script src="../controller/colorschema.js"></script>
 <script src="../controller/drawingtool.js"></script>
 </body>
