responsive layout functionality resolved

--- a/app/view/index.html
+++ b/app/view/index.html
@@ -86,7 +86,7 @@
                             <label>&nbsp;</label>
                             <button onclick="colourChange()">Add</button>
                             <button onclick="pixelDel()">Delete</button>
-                            <button onclick="undo()">Undo</button>
+                            <button onclick="undo()">Reset</button>
                         </div>
                     </div>
                     <!--<button onclick="checkBounds()">test</button>-->
@@ -157,7 +157,7 @@
         </div>
     </fieldset>
 </div>
-<canvas id="canvas2" width=1000 height=1000 style="display: none"></canvas>
+<canvas id="canvas2" width=1000 height=1000 style=""></canvas>
 <script type="text/javascript">
     $("#img_inner").height($("#img_inner").width());
     $("#preview").height($("#preview").width());
