--- a/app/view/responsive/responsive.css
+++ b/app/view/responsive/responsive.css
@@ -5,6 +5,12 @@
 	color: #333333;
 }
 
+html, body {
+	height: 100%;
+	margin: 0;
+	overflow-x:hidden;
+	position:relative;
+}
 .clear {
 	clear: both;
 }
@@ -29,6 +35,16 @@
 	clear: both;
 }
 
+nav{
+	position:absolute;
+	top:0; left:0;
+	height:30px;
+}
+
+.wrapper1 {
+	height: 100%;
+	background: #263729;
+}
 
 /* Start Heading */
 #heading {
